# junglescout-python-client

./: .env.test  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  pyproject.toml  test.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  semver.yml
docs/: .gitignore  api.rst  conf.py  getting_started.rst  index.rst
docs/examples/: async_support.rst  closing_client_connections.rst  example_1.rst  example_2.rst  index.rst  keyword_data_share_of_voice_data.rst
src/jungle_scout/: base_model.py  base_request.py  client.py  session.py
src/jungle_scout/examples/: ClicksAndConversions.ipynb
src/jungle_scout/models/: historical_search_volume.py  keyword.py  keyword_by_asin.py  keyword_by_keyword.py  product_database.py  sales_estimates.py  share_of_voice.py
src/jungle_scout/models/parameters/: __init__.py  api_type.py  attributes.py  filter_options.py  marketplace.py  params.py  product_filter_options.py  product_sort.py  product_tiers.py  seller_types.py  sort.py
src/jungle_scout/models/requests/: __init__.py  base_request.py  historical_search_volume.py  historical_search_volume_request.py  keyword_by_asin_request.py  keywords_by_keyword_request.py  method.py  product_database_request.py  request_type.py  sales_estimates_request.py  share_of_voice_request.py
src/jungle_scout/models/responses/: __init__.py  api_response.py  base_response.py  historical_search_volume.py  keyword_by_asin.py  keyword_by_keyword.py  product_database.py  sales_estimates.py  serializer_helpers.py  share_of_voice.py
src/junglescout/: __init__.py  async_client.py  client.py  client_async.py  client_base.py  client_sync.py  exceptions.py  session.py
src/junglescout/models/: __init__.py  default_if_none.py
src/junglescout/models/parameters/: attributes.py  params.py  product_sort.py  product_tiers.py  sort.py
src/junglescout/models/requests/: __init__.py  base_request.py  historical_search_volume_request.py  keyword_by_asin_request.py  keywords_by_keyword_request.py  method.py  product_database_request.py  request.py  request_type.py  sales_estimates_request.py  share_of_voice_request.py
src/junglescout/models/responses/: __init__.py  api_response.py  historical_search_volume.py  keyword_by_asin.py  keyword_by_keyword.py  product_database.py  sales_estimates.py  serializer_helpers.py  share_of_voice.py
tests/: test_client.py  test_integration.py
tests/client/: test_client_instantiate.py  test_historical_search_volume.py  test_keywords_by_asins.py  test_keywords_by_keyword.py  test_product_database.py  test_sales_estimates.py  test_share_of_voice.py
tests/client/factories/: keyword_by_asin_factory.py
tests/client_async/: __init__.py  conftest.py  test_historical_search_volume.py  test_keywords_by_asins.py  test_keywords_by_keyword.py  test_product_database.py  test_sales_estimates.py  test_share_of_voice.py
tests/client_sync/: conftest.py  test_client_instantiate.py  test_historical_search_volume.py  test_keywords_by_asins.py  test_keywords_by_keyword.py  test_product_database.py  test_sales_estimates.py  test_share_of_voice.py
tests/factories/: historical_search_volume_factory.py  keyword_by_asin_factory.py  keywords_by_keyword_factory.py  product_database_factory.py  sales_estimates_factory.py  share_of_voice_factory.py
tests/integration/: conftest.py  test_historical_search_volume.py  test_keywords_by_asin.py  test_keywords_by_keyword.py  test_product_database.py  test_sales_estimates.py  test_share_of_voice.py
tests/integration/client_async/: test_historical_search_volume.py  test_keywords_by_asin.py  test_keywords_by_keyword.py  test_product_database.py  test_sales_estimates.py  test_share_of_voice.py
tests/integration/client_sync/: test_historical_search_volume.py  test_keywords_by_asin.py  test_keywords_by_keyword.py  test_product_database.py  test_sales_estimates.py  test_share_of_voice.py
tests/models/client/: test_client_instantiate.py
tests/models/requests/: test_historical_search_volume_request.py  test_keyword_by_asins_request.py  test_keywords_by_keyword_request.py  test_product_database_request.py  test_sales_estimates_request.py  test_share_of_voice_request.py
tests/models/responses/: test_historical_search_volume.py  test_keyword_by_asin.py  test_keyword_by_keyword.py  test_product_database.py  test_sales_estimates.py  test_share_of_voice.py
