[tool.poetry]
package-mode = true
name = "jungle-scout"
version = "0.1.0"
license = "MIT"
authors = ["Jungle Scout <support@junglescout.com>"]
description = "Jungle Scout API Client"
readme = "README.md"
repository = "https://github.com/Junglescout/jungle-scout-python-client"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.3"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-sugar = "^1.0.0"
github3-py = {extras = ["test"], version = "^4.0.1"}
tox = ">=4"
black = "22.3.0"
isort = "5.13.2"
ipython = {version = "^8.22.2", python = ">=3.10,<4.0"}
pytest-dotenv = "^0.5.2"
pyright = "^1.1.352"
ruff = "^0.3.0"
requests-mock = "^1.11.0"
factory-boy = "^3.3.0"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"
rstfmt = "^0.0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
skip-numeric-underscore-normalization = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
env_override_existing_values = 1
env_files = [".env.test"]
markers = [
    "integration: mark a test as an integration test",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
